# mujoco_human_v2

./: .gitignore  CMakeLists.txt  README.md  bot_ros.cmake  botadaptor.cmake  idlgen.cmake  main.cc  options.cmake  package.xml  package_source.sh  start_mujoco_simulation_bridge.sh  thirdparties.cmake  user_func.hpp  utils.cmake
checkpoint/efc/: beta_13dof_120p.onnx  beta_13dof_3d.onnx  beta_13dof_3dv2.onnx  beta_13dof_4d.onnx  beta_13dof_large_d.onnx  delta_terrain.onnx  easy_dance.onnx  easy_dance2.onnx  policy.onnx  policy_bydm_23000.onnx  policy_bydm_24000.onnx  policy_bydm_25000.onnx  policy_bydm_26000.onnx  policy_getup_20000.onnx  policy_getup_22000.onnx  policy_getup_24000.onnx  policy_getup_25000.onnx  policy_getup_26000.onnx  policy_getup_28000.onnx  policy_getup_29000.onnx  policy_getup_30000.onnx  policy_jump_14000.onnx  policy_msl_21.onnx  policy_msl_o6.onnx  theta_3d_v2.onnx  theta_3d_v3.onnx  theta_3d_v42.onnx  theta_3d_v43.onnx  theta_3d_v44.onnx  theta_6.onnx  theta_large_d.onnx  theta_terrain.onnx  torso_cmd.onnx
config/: backend.json  efc.xml  efc.yaml  efc.yaml.zzy
docs/: software_architecture.md
idl/src/: HandOp.idl  RobotData.idl  RobotRecvData.idl
include/cifx/robot/: common.h  robot.h
include/dds/: dds_pubsub_data.hpp  handop_interface.hpp
include/efc/backend/bus/: efc_bus.h
include/efc/backend/dds/: dds_interface.hpp  dds_pubsub.hpp  handop_ui.hpp
include/efc/backend/device/: efc_device.hpp  efc_imu.h  efc_joint.h
include/efc/backend/kernel/: efc_kernel.hpp
include/efc/controller/: handshake.hpp  head_survey.hpp  init_pos.hpp  policy_controller_base.hpp  policy_controller_factory.hpp  policy_ctl_leg_only.hpp  policy_ctr_21dof.hpp  policy_ctr_auto.hpp  policy_ctr_beyond_mimic.hpp  policy_ctr_leg_waist.hpp  wave_greeting.hpp
include/efc/robot/: common.h  robot.h
include/efc/utils/: backend_event_decl.hpp  efc_ankle.hpp
include/gz/robot/: robot.h
include/interaction/ros/: rosmodule.h  status_publisher.hpp  status_subscriber.hpp
include/mj/robot/: robot.h
include/simulation/: mujoco_simulation_bridge.h
mj/: MUJOCO_LOG.TXT
mj/src/: MUJOCO_LOG.TXT
mj/src/custom_msgs/: CMakeLists.txt  package.xml
mj/src/custom_msgs/srv/: ActuatorCmds.msg  MujocoMsg.msg  ToSimMsg.msg
mj/src/mujoco_node/: CMakeLists.txt  MUJOCO_LOG.TXT  package.xml
mj/src/mujoco_node/include/mujoco_node/: MujocoMsgHandler.h  mujoco_node.h  simulate.h
mj/src/mujoco_node/models/humanoid/: .asset_hash  config.yaml  efc_converted copy.xml  efc_converted.xml  scene.xml
mj/src/mujoco_node/models/humanoid/configuration/: huahui_v1d2_physics.usd  huahui_v1d2_sensor.usd
mj/src/mujoco_node/models/humanoid/launch/: display.launch
mj/src/mujoco_node/models/humanoid/meshes/: base_link.STL  head.STL  left_ankle_pitch.STL  left_ankle_roll.STL  left_elbow_pitch.STL  left_elbow_yaw.STL  left_hip_pitch.STL  left_hip_roll.STL  left_hip_yaw.STL  left_knee.STL  left_shoulder_pitch.STL  left_shoulder_roll.STL  left_shoulder_yaw.STL  right_ankle_pitch.STL  right_ankle_roll.STL  right_elbow_pitch.STL  right_elbow_yaw.STL  right_hip_pitch.STL  right_hip_roll.STL  right_hip_yaw.STL  right_knee.STL  right_shoulder_pitch.STL  right_shoulder_roll.STL  right_shoulder_yaw.STL  upper_body.STL
mj/src/mujoco_node/models/humanoid_host_collision/: CMakeLists.txt  efc_converted.xml  package.xml  scene copy.xml  scene.xml
mj/src/mujoco_node/models/humanoid_host_collision/config/: SR01.yaml
mj/src/mujoco_node/models/humanoid_host_collision/launch/: gazebo.launch
mj/src/mujoco_node/models/humanoid_host_collision/meshes/: base_link.STL  elbow_yaw.STL  head.STL  left_ankle_pitch.STL  left_elbow_pitch.STL  left_elbow_yaw.STL  left_hip_pitch.STL  left_hip_roll.STL  left_knee.STL  left_shoulder_pitch.STL  left_shoulder_roll.STL  left_shoulder_yaw.STL  right_ankle_pitch.STL  right_ankle_roll.STL  right_elbow_pitch.STL  right_elbow_yaw.STL  right_hip_pitch.STL  right_hip_roll.STL  right_hip_yaw.STL  right_knee.STL  right_shoulder_pitch.STL  right_shoulder_roll.STL  right_shoulder_yaw.STL
mj/src/mujoco_node/models/humanoid_host_collision/urdf/: efc.urdf  efc_12dof_fake_lim.urdf
mj/src/mujoco_node/src/: MujocoMsgHandler.cpp  mujoco_node.cpp  simulate.cc
src/efc/bus/: efc_bus.cc
src/efc/device/: efc_imu.cc  efc_joint.cc
src/interaction/ros/: rosmodule.cpp  status_publisher.cpp  status_subscriber.cpp
src/simulation/: mujoco_simulation_bridge.cpp  mujoco_simulation_bridge_main.cpp
src/test/: ankle_test.cc  fake_robot_node.cc  pub_test.cc  sub_test.cc
